--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --port 8080"
-},
-  
+    "start": "webpack serve --port 8080"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
